--- a/package.json
+++ b/package.json
@@ -16,9 +16,5 @@
     "turbo": "^2.0.3"
   },
   "packageManager": "pnpm@8.15.6",
-  "name": "design-system",
-  "workspaces": [
-    "packages/*",
-    "apps/*"
-  ]
+  "name": "design-system"
 }
