--- a/package.json
+++ b/package.json
@@ -15,5 +15,6 @@
     "prettier": "^3.2.5",
     "turbo": "^2.0.3"
   },
-  "name": "design-system"
+  "name": "design-system",
+  "packageManager": "yarn@1.22.22"
 }
