--- a/package.json
+++ b/package.json
@@ -15,10 +15,6 @@
     "prettier": "^3.2.5",
     "turbo": "^2.0.3"
   },
-  "packageManager": "yarn@1.22.22",
-  "name": "design-system",
-  "workspaces": [
-    "packages/*",
-    "apps/*"
-  ]
+  "packageManager": "pnpm@8.15.6",
+  "name": "design-system"
 }
