--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@ssokkk7777/ui",
-  "version": "0.0.10",
+  "name": "@ssokk7777/ui",
+  "version": "0.0.11",
   "sideEffects": false,
   "license": "MIT",
   "exports": {
