--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
     "turbo": "^2.0.3"
   },
   "packageManager": "pnpm@8.15.6",
-  "name": "design-system"
+  "name": "design-system",
+  "publishConfig": {
+    "registry": "https://npm.pkg.github.com/",
+    "access": "public"
+  }
 }
